Added CSS interactivity to main and responinsive on index

--- a/index.html
+++ b/index.html
@@ -31,23 +31,26 @@
       </nav>
     </header>
     <div id="wrapper"></div>
-    <span id="welcomepg">
+    <ul class="welcomepg">
       <li>
         <a href="aerial.html">
         <img src="img/RebSplit.jpg" alt="aerial silks arabesque split">
+        <span class="text-content"><span>Aerial</span></span>
         </a>
       </li>
       <li>
         <a href="acro.html">
         <img src="img/AcroH2H.jpg" alt="acro yoga low hand to hand">
+        <span class="text-content"><span>Acro</span></span>
         </a>
       </li>
         <li>
           <a href="art.html">
           <img src="img/GlassRupeeO.jpg" alt="Nicole Iwasaki glass gem, Legend of Zelda 5 rupee">
+          <span class="text-content"><span>Art</span></span>
           </a>
         </li>
-    </span>
+    </ul>
     <footer>
       <a href="http:/facebook.com/nicosaki"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon">
       </a>
