update art and acro gallery

--- a/acro.html
+++ b/acro.html
@@ -60,9 +60,9 @@
           </a>
         </li>
         <li>
-          <a href="img/AcroRevBird.jpg">
-          <img src="img/AcroRevBird.jpg" alt="standing reverse bird acro yoga pose">
-            <p>Standing reverse arch/bird</p>
+          <a href="img/Acro_SF2H.jpg">
+          <img src="img/Acro_SF2H.jpg" alt="standing foot to hand balance">
+            <p>Standing foot to hand</p>
           </a>
         <li>
           <a href="img/AcroLean.jpg">
