--- a/art.html
+++ b/art.html
@@ -65,9 +65,21 @@
           </a>
         </li>
         <li>
+          <a href="img/RainBird.jpg">
+          <img src="img/RainBird.jpg" alt="Nicole Iwasaki bird in rain - watercolor + ink">
+            <p>Watercolor and india ink bird</p>
+          </a>
+        </li>
+        <li>
           <a href="img/InkBranch.jpg">
           <img src="img/InkBranch.jpg" alt="Nicole Iwasaki bird on cherry blossom branch - watercolor ink">
             <p>India ink and watercolor cherry blossom branch</p>
+          </a>
+        </li>
+        <li>
+          <a href="img/JellyTangle.jpg">
+          <img src="img/JellyTangle.jpg" alt="Nicole Iwasaki watercolor ink jellyfish zentangle">
+            <p>India ink and watercolor zentangle jellyfish</p>
           </a>
         </li>
       </ul>
